extends Node2D
@onready var progress_bar = $ProgressBar
@onready var timer = $Timer
@onready var sprite = $Sprite2D if has_node("Sprite2D") else null

# ìºë¦­í„°ê°€ ì˜ì—­ ì•ˆì— ìˆëŠ”ì§€ ì¶”ì í•˜ëŠ” ë³€ìˆ˜
var is_character_inside : bool = false
@onready var normal_sound = $normal_sound
@onready var good_sound = $good_sound

# ì˜¤ë””ì˜¤ í’€ë§ ì‹œìŠ¤í…œ
var normal_sound_pool: Array[AudioStreamPlayer] = []
var good_sound_pool: Array[AudioStreamPlayer] = []
const AUDIO_POOL_SIZE: int = 5  # í’€ í¬ê¸°

# ì¹´ë©”ë¼ ê³ ì • ê´€ë ¨ ë³€ìˆ˜
var is_camera_locked : bool = false  # ì¹´ë©”ë¼ê°€ ì´ ëŒì— ê³ ì •ë˜ì—ˆëŠ”ì§€
var time_since_last_mining : float = 0.0  # ë§ˆì§€ë§‰ ì±„êµ´ í›„ ê²½ê³¼ ì‹œê°„
const CAMERA_UNLOCK_TIME : float = 5.0  # 5ì´ˆ í›„ ì¹´ë©”ë¼ ê³ ì • í•´ì œ

# ë°”ìœ„ í”ë“¤ë¦¼ íš¨ê³¼
var shake_amount : float = 0.0
var original_position : Vector2 = Vector2.ZERO
const GALMURI_9 = preload("uid://dqloen3424vrx")

# ì±„êµ´ ì‹œìŠ¤í…œ ë³€ìˆ˜
var go_down = false
var now_time : float = 0.0
var max_time : float = 10.0  # ì±„êµ´ ì™„ë£Œê¹Œì§€ í•„ìš”í•œ ì‹œê°„
var decay_rate : float = 3.0  # ì´ˆë‹¹ ê°ì†Œ ì†ë„ (í”„ë ˆì„ ë…ë¦½ì )
var mining_speed : float = 1.0  # Fí‚¤ í•œ ë²ˆë‹¹ ì±„êµ´ ì§„í–‰ë„ (ê¸°ë³¸ê°’)
var decay_delay : float = 5.0  # ê²Œì´ì§€ ê°ì†Œ ëŒ€ê¸° ì‹œê°„ (5ì´ˆ)
var last_hit_time : float = 0.0  # ë§ˆì§€ë§‰ìœ¼ë¡œ Fí‚¤ë¥¼ ëˆ„ë¥¸ ì‹œê°„

# íŒŒí‹°í´ ì‹œìŠ¤í…œ (ìŠ¤í”„ë¼ì´íŠ¸ ê¸°ë°˜)
var dust_texture : Texture2D  # ë¨¼ì§€ ìŠ¤í”„ë¼ì´íŠ¸ í…ìŠ¤ì²˜

# ë§ˆìš°ìŠ¤ í´ë¦­ ì¶”ì  (ì‚¬ìš© ì•ˆ í•¨ - ì°¨ì§• ì‹œìŠ¤í…œ ì‚¬ìš©)
# var mouse_just_clicked : bool = false

# ì±„êµ´ í‚¤ ì…ë ¥ ì¶”ì  (ì‚¬ìš© ì•ˆ í•¨ - character.gdì—ì„œ ì²˜ë¦¬)
# var was_mining_key1_pressed : bool = false
# var was_mining_key2_pressed : bool = false

# ëŒ€ê¸°ì‹œê°„ ì‹œìŠ¤í…œ (ì‚¬ìš© ì•ˆ í•¨)
var is_cooldown : bool = false  # ëŒ€ê¸°ì‹œê°„ ì¤‘ì¸ì§€ ì—¬ë¶€
var cooldown_time : float = 0.0  # ëŒ€ê¸°ì‹œê°„ (ì´ˆ) - 0ìœ¼ë¡œ ì„¤ì •í•˜ì—¬ ë¹„í™œì„±í™”
var cooldown_timer : float = 0.0  # í˜„ì¬ ëŒ€ê¸°ì‹œê°„ íƒ€ì´ë¨¸

func _ready():
	# rocks ê·¸ë£¹ì— ì¶”ê°€ (ìºë¦­í„°ê°€ ì°¾ì„ ìˆ˜ ìˆë„ë¡)
	add_to_group("rocks")
	
	# ë¨¼ì§€ ìŠ¤í”„ë¼ì´íŠ¸ í…ìŠ¤ì²˜ ë¡œë“œ
	dust_texture = load("res://CONCEPT/asset/mine_clicker32-dust.png")
	
	
	# ìŠ¤í”„ë¼ì´íŠ¸ ì›ë˜ ìœ„ì¹˜ ì €ì¥
	if sprite:
		original_position = sprite.position
	
	# í”„ë¡œê·¸ë ˆìŠ¤ë°” ìˆ¨ê¹€ (ì°¨ì§• ì‹œìŠ¤í…œ ì‚¬ìš©)
	if progress_bar:
		progress_bar.visible = false
	
	# ì˜¤ë””ì˜¤ í’€ ì´ˆê¸°í™”
	_init_audio_pool()

# ë§ˆìš°ìŠ¤ í´ë¦­ ì²˜ë¦¬ëŠ” ì´ì œ ì‚¬ìš© ì•ˆ í•¨ (ì°¨ì§• ì‹œìŠ¤í…œ ì‚¬ìš©)
# func _input(event):
# 	if is_character_inside and event is InputEventMouseButton:
# 		if event.button_index == MOUSE_BUTTON_LEFT and event.pressed:
# 			mouse_just_clicked = true

func _physics_process(delta):
	# ëŒ€ê¸°ì‹œê°„ ì²˜ë¦¬
	if is_cooldown:
		cooldown_timer -= delta
		if cooldown_timer <= 0.0:
			is_cooldown = false
			cooldown_timer = 0.0
	
	# ì¹´ë©”ë¼ ê³ ì • í•´ì œ ì²´í¬ (5ì´ˆ ë™ì•ˆ ì±„êµ´í•˜ì§€ ì•Šê±°ë‚˜ ì˜ì—­ì„ ë²—ì–´ë‚˜ë©´)
	if is_camera_locked:
		if not is_character_inside:
			# ì˜ì—­ì„ ë²—ì–´ë‚˜ë©´ ì¦‰ì‹œ ì¹´ë©”ë¼ ê³ ì • í•´ì œ
			unlock_camera()
		else:
			# ì˜ì—­ ì•ˆì— ìˆì§€ë§Œ ì±„êµ´í•˜ì§€ ì•Šìœ¼ë©´ íƒ€ì´ë¨¸ ì¦ê°€
			time_since_last_mining += delta
			if time_since_last_mining >= CAMERA_UNLOCK_TIME:
				unlock_camera()
	
	# í‚¤ ì…ë ¥ ì²˜ë¦¬ëŠ” ì´ì œ character.gdì—ì„œ ì²˜ë¦¬
	# (ì°¨ì§• ì‹œìŠ¤í…œ ì‚¬ìš©)
	
	# 5ì´ˆ ê²½ê³¼ í›„ ê²Œì´ì§€ ê°ì†Œ ì‹œì‘
	if now_time > 0 and not is_cooldown:
		var current_time = Time.get_ticks_msec() / 1000.0
		var time_since_last_hit = current_time - last_hit_time
		
		if time_since_last_hit >= decay_delay:
			# 5ì´ˆê°€ ì§€ë‚¬ìœ¼ë©´ ê°ì†Œ ì‹œì‘
			if not go_down:
				go_down = true
				timer.start()
	
	# í”„ë ˆì„ ë…ë¦½ì  ê°ì†Œ (delta ì‚¬ìš©)
	if go_down:
		if now_time > 0:
			now_time -= decay_rate * delta
			if now_time < 0:
				now_time = 0
	
	# í”„ë¡œê·¸ë ˆìŠ¤ë°” ì—…ë°ì´íŠ¸
	if is_cooldown:
		# ëŒ€ê¸°ì‹œê°„ ì¤‘ì—ëŠ” í”„ë¡œê·¸ë ˆìŠ¤ë°”ë¥¼ ëŒ€ê¸°ì‹œê°„ í‘œì‹œë¡œ ì‚¬ìš©
		progress_bar.value = (cooldown_time - cooldown_timer) / cooldown_time * max_time
	else:
		progress_bar.value = now_time
	
	# í”„ë¡œê·¸ë ˆìŠ¤ë°” ìƒ‰ìƒ ë³€ê²½ (ì§„í–‰ë„ì— ë”°ë¼)
	update_progress_color()
	
	# ë°”ìœ„ í”ë“¤ë¦¼ íš¨ê³¼ ì—…ë°ì´íŠ¸ (ë¹„í™œì„±í™”)
	# update_shake_effect(delta)

# ì²« ë²ˆì§¸ í´ë¦­ ì‹œ ì¹´ë©”ë¼ë¥¼ ê³ ì •í•©ë‹ˆë‹¤ (ì°¨ì§• ì‹œì‘).
func lock_camera_on_first_hit():
	# ì¹´ë©”ë¼ ê³ ì • (ì²˜ìŒ í´ë¦­ ì‹œ)
	if not is_camera_locked:
		lock_camera()
	
	# ì±„êµ´ íƒ€ì´ë¨¸ ë¦¬ì…‹
	time_since_last_mining = 0.0

# ì¹´ë©”ë¼ê°€ ì´ ëŒì— ê³ ì •ë˜ì–´ ìˆëŠ”ì§€ ë°˜í™˜í•©ë‹ˆë‹¤.
func is_camera_locked_to_this() -> bool:
	return is_camera_locked

# í”Œë ˆì´ì–´ë¡œë¶€í„° ì±„êµ´ ì‹ í˜¸ë¥¼ ë°›ìŠµë‹ˆë‹¤ (ì°¨ì§• ì‹œìŠ¤í…œ).
func mine_from_player():
	# ìºë¦­í„°ê°€ ì˜ì—­ ì•ˆì— ìˆê³  ì±„êµ´ ê°€ëŠ¥í•œ ìƒíƒœì¸ì§€ í™•ì¸
	if not is_character_inside or is_cooldown:
		return
	
	# ì±„êµ´ íƒ€ì´ë¨¸ ë¦¬ì…‹
	time_since_last_mining = 0.0
	
	# ì¦‰ì‹œ ì±„êµ´ ì™„ë£Œ
	complete_mining()

# ì±„êµ´ ì™„ë£Œ í•¨ìˆ˜
func complete_mining():
	# ê³¡ê´­ì´ ì• ë‹ˆë©”ì´ì…˜ì€ character.gdì—ì„œ ì´ë¯¸ ì‹¤í–‰ë¨
	
	# í”¼ë²„ ë°°ìœ¨ ì ìš©
	var money_gained = int(Globals.money_up * Globals.fever_multiplier)
	
	# x3, x2 í™•ë¥  ì²´í¬ (Globalsì—ì„œ ê´€ë¦¬)
	# x3 ë¨¼ì € ì²´í¬ (ë” í¬ê·€í•¨)
	var random_roll = randf()
	var is_x3 = random_roll < Globals.x3_chance
	var is_x2 = not is_x3 and random_roll < (Globals.x3_chance + Globals.x2_chance)
	
	if is_x3:
		money_gained *= 3
	elif is_x2:
		money_gained *= 2
	
	Globals.money += money_gained
	
	now_time = 0
	
	# ëŒ€ê¸°ì‹œê°„ ì—†ìŒ (ì¦‰ì‹œ ë‹¤ì‹œ ì±„êµ´ ê°€ëŠ¥)
	
	# ë¨¼ì§€ ìŠ¤í”„ë¼ì´íŠ¸ íŒŒí‹°í´ ë°œìƒ
	spawn_dust_particles(8)
	
	# ë– ì˜¤ë¥´ëŠ” í…ìŠ¤íŠ¸ ìƒì„± (x3ì´ë©´ íŠ¹ë³„, x2ì´ë©´ í¬ë¦¬í‹°ì»¬)
	if is_x3:
		spawn_floating_text_jackpot("+ğŸ’" + str(money_gained) + "!!")
	elif is_x2:
		spawn_floating_text_critical("+ğŸ’" + str(money_gained) + "!")
	else:
		spawn_floating_text("+ğŸ’" + str(money_gained))

# í”„ë¡œê·¸ë ˆìŠ¤ë°” ìƒ‰ìƒ ì—…ë°ì´íŠ¸ (ì´ˆë¡ â†’ ë…¸ë‘ â†’ ë¹¨ê°•) + ì• ë‹ˆë©”ì´ì…˜
func update_progress_color():
	# ëŒ€ê¸°ì‹œê°„ ì¤‘ì—ëŠ” íšŒìƒ‰ìœ¼ë¡œ í‘œì‹œ
	if is_cooldown:
		progress_bar.modulate = Color(0.5, 0.5, 0.5, 0.7)  # íšŒìƒ‰ (ëŒ€ê¸° ì¤‘)
		progress_bar.scale = Vector2(1.0, 1.0)
		return
	
	var progress_ratio = now_time / max_time
	
	# ì§„í–‰ë„ê°€ ìˆìœ¼ë©´ í”„ë¡œê·¸ë ˆìŠ¤ë°” í„ìŠ¤ íš¨ê³¼
	if now_time > 0 and is_character_inside:
		# í„ìŠ¤ íš¨ê³¼ (ì‹œê°„ì— ë”°ë¼ í¬ê¸° ë³€í™”)
		var pulse = 1.0 + sin(Time.get_ticks_msec() / 100.0) * 0.1
		progress_bar.scale = Vector2(pulse, pulse)
	else:
		progress_bar.scale = Vector2(1.0, 1.0)
	
	# ì§„í–‰ë„ì— ë”°ë¥¸ ìƒ‰ìƒ ë³€ê²½ (ë¶€ë“œëŸ¬ìš´ ê·¸ë¼ë””ì–¸íŠ¸)
	if progress_ratio < 0.33:
		# ì´ˆë¡ìƒ‰
		progress_bar.modulate = Color(0.3, 1.0, 0.3)
	elif progress_ratio < 0.66:
		# ë…¸ë€ìƒ‰
		progress_bar.modulate = Color(1.0, 1.0, 0.3)
	else:
		# ë¹¨ê°„ìƒ‰ + ë°ê¸° ì¦ê°€ (ê±°ì˜ ì™„ë£Œ)
		var brightness = 1.0 + (progress_ratio - 0.66) * 0.5
		progress_bar.modulate = Color(1.0 * brightness, 0.3, 0.3)


# ë¨¼ì§€ ìŠ¤í”„ë¼ì´íŠ¸ íŒŒí‹°í´ ìƒì„± (ìœ„ë¡œ ì˜¬ë¼ê°”ë‹¤ ì¤‘ë ¥ì— ì˜í•´ ë–¨ì–´ì§)
func spawn_dust_particles(amount: int):
	for i in range(amount):
		var dust_sprite = Sprite2D.new()
		
		# ì²˜ìŒì—ëŠ” ì™¼ìª½ ì´ë¯¸ì§€ (í° ë¨¼ì§€)ë¡œ ì‹œì‘
		var atlas_tex = AtlasTexture.new()
		atlas_tex.atlas = dust_texture
		atlas_tex.region = Rect2(0, 0, 16, 16)  # ì™¼ìª½ ì´ë¯¸ì§€
		dust_sprite.texture = atlas_tex
		
		# í¬ê¸° ì„¤ì • (0.4 ~ 0.7 ë°°ìœ¨) - ì‚´ì§ ì¤„ì„
		var scale_val = randf_range(0.4, 0.7)
		dust_sprite.scale = Vector2(scale_val, scale_val)
		
		# í”½ì…€ ì•„íŠ¸ í•„í„° ì„¤ì •
		dust_sprite.texture_filter = CanvasItem.TEXTURE_FILTER_NEAREST
		
		add_child(dust_sprite)
		
		# ë¬¼ë¦¬ ì‹œë®¬ë ˆì´ì…˜ìœ¼ë¡œ ì¤‘ë ¥ íš¨ê³¼ êµ¬í˜„
		_animate_dust_with_gravity(dust_sprite, atlas_tex)

# ì¤‘ë ¥ íš¨ê³¼ê°€ ìˆëŠ” ë¨¼ì§€ íŒŒí‹°í´ ì• ë‹ˆë©”ì´ì…˜
func _animate_dust_with_gravity(dust_sprite: Sprite2D, atlas_tex: AtlasTexture):
	# ì´ˆê¸° ì†ë„ (ìœ„ìª½ìœ¼ë¡œ íŠ€ì–´ì˜¤ë¦„)
	var angle = randf_range(-150, -30) * PI / 180.0  # ìœ„ìª½ ë°©í–¥
	var speed = randf_range(30, 60)
	var velocity = Vector2(cos(angle), sin(angle)) * speed
	
	# ì¤‘ë ¥ ê°’
	var gravity = 120.0
	
	# ì´ ìˆ˜ëª…
	var lifetime = randf_range(0.5, 0.8)
	var elapsed = 0.0
	
	# íšŒì „ ì†ë„
	var rotation_speed = randf_range(-4.0, 4.0)
	
	# ìŠ¤í”„ë¼ì´íŠ¸ ì „í™˜ ì—¬ë¶€ (í•œ ë²ˆë§Œ ì „í™˜)
	var switched_sprite = false
	
	# ìŠ¤í”„ë¼ì´íŠ¸ ì „í™˜ ì‹œì  (30% ~ 50% ì‚¬ì´ ëœë¤)
	var switch_progress = randf_range(0.3, 0.5)
	
	# ë§¤ í”„ë ˆì„ ì—…ë°ì´íŠ¸
	while elapsed < lifetime and is_instance_valid(dust_sprite):
		var delta = get_process_delta_time()
		elapsed += delta
		
		# ì¤‘ë ¥ ì ìš© (ì†ë„ì˜ yê°’ ì¦ê°€)
		velocity.y += gravity * delta
		
		# ìœ„ì¹˜ ì—…ë°ì´íŠ¸
		dust_sprite.position += velocity * delta
		
		# íšŒì „
		dust_sprite.rotation += rotation_speed * delta
		
		# ì§„í–‰ë„ ê³„ì‚°
		var progress = elapsed / lifetime
		
		# ëœë¤ ì‹œì ì—ì„œ ì˜¤ë¥¸ìª½ ì´ë¯¸ì§€(ì‘ì€ ë¨¼ì§€)ë¡œ ì „í™˜
		if not switched_sprite and progress > switch_progress:
			atlas_tex.region = Rect2(16, 0, 16, 16)  # ì˜¤ë¥¸ìª½ ì´ë¯¸ì§€ë¡œ ë³€ê²½
			switched_sprite = true
		
		# í˜ì´ë“œì•„ì›ƒ (í›„ë°˜ë¶€ì—ë§Œ)
		if progress > 0.5:
			dust_sprite.modulate.a = 1.0 - (progress - 0.5) * 2.0
		
		await get_tree().process_frame
	
	# ì‚­ì œ
	if is_instance_valid(dust_sprite):
		dust_sprite.queue_free()

# ì˜¤ë””ì˜¤ í’€ ì´ˆê¸°í™”
func _init_audio_pool():
	# normal_sound í’€ ìƒì„±
	if normal_sound and normal_sound.stream:
		for i in range(AUDIO_POOL_SIZE):
			var player = AudioStreamPlayer.new()
			player.stream = normal_sound.stream
			player.volume_db = normal_sound.volume_db
			player.bus = normal_sound.bus
			add_child(player)
			normal_sound_pool.append(player)
	
	# good_sound í’€ ìƒì„±
	if good_sound and good_sound.stream:
		for i in range(AUDIO_POOL_SIZE):
			var player = AudioStreamPlayer.new()
			player.stream = good_sound.stream
			player.volume_db = good_sound.volume_db
			player.bus = good_sound.bus
			add_child(player)
			good_sound_pool.append(player)

# í’€ì—ì„œ ì‚¬ìš© ê°€ëŠ¥í•œ í”Œë ˆì´ì–´ ì°¾ì•„ì„œ ì¬ìƒ
func _play_from_pool(pool: Array[AudioStreamPlayer]):
	for player in pool:
		if not player.playing:
			player.play()
			return
	# ëª¨ë“  í”Œë ˆì´ì–´ê°€ ì‚¬ìš© ì¤‘ì´ë©´ ì²« ë²ˆì§¸ í”Œë ˆì´ì–´ ì¬ì‹œì‘
	if pool.size() > 0:
		pool[0].play()

# ë– ì˜¤ë¥´ëŠ” í…ìŠ¤íŠ¸ ìƒì„±
func spawn_floating_text(text: String):
	_play_from_pool(normal_sound_pool)
	# floating_text.gdì˜ ì •ì  í•¨ìˆ˜ ì‚¬ìš©
	var floating_text_script = load("res://floating_text.gd")
	if floating_text_script:
		# ê¸ˆìƒ‰ìœ¼ë¡œ í‘œì‹œ
		floating_text_script.create(self, Vector2(0, -20), text, Color(1.0, 0.9, 0.3))

# í¬ë¦¬í‹°ì»¬ ë– ì˜¤ë¥´ëŠ” í…ìŠ¤íŠ¸ ìƒì„± (x2 ë³´ë„ˆìŠ¤)
func spawn_floating_text_critical(text: String):
	_play_from_pool(good_sound_pool)
	var floating_text_script = load("res://floating_text.gd")
	if floating_text_script:
		# í•‘í¬-ë³´ë¼ìƒ‰ìœ¼ë¡œ í‘œì‹œ
		floating_text_script.create(self, Vector2(0, -20), text, Color(1.0, 0.3, 0.8))

# ì­íŒŸ ë– ì˜¤ë¥´ëŠ” í…ìŠ¤íŠ¸ ìƒì„± (x3 ë³´ë„ˆìŠ¤)
func spawn_floating_text_jackpot(text: String):
	_play_from_pool(good_sound_pool)
	var floating_text_script = load("res://floating_text.gd")
	if floating_text_script:
		# íŒŒë€ìƒ‰ìœ¼ë¡œ í‘œì‹œ (ì­íŒŸ!)
		floating_text_script.create(self, Vector2(0, -20), text, Color(0.3, 0.6, 1.0))


func _on_area_2d_body_shape_entered(_body_rid, body, _body_shape_index, _local_shape_index):
	# ë“¤ì–´ì˜¨ bodyê°€ CharacterBody2D íƒ€ì…ì¸ì§€ í™•ì¸
	if body is CharacterBody2D:
		is_character_inside = true


func _on_area_2d_body_shape_exited(_body_rid, body, _body_shape_index, _local_shape_index):
	# ë‚˜ê°„ bodyê°€ CharacterBody2D íƒ€ì…ì¸ì§€ í™•ì¸
	if body is CharacterBody2D:
		is_character_inside = false
		
		# ì˜ì—­ì„ ë²—ì–´ë‚˜ë©´ ì¹´ë©”ë¼ ê³ ì • í•´ì œ
		if is_camera_locked:
			unlock_camera()


func _on_timer_timeout():
	go_down = true

# ì¹´ë©”ë¼ë¥¼ ì´ ëŒ ìœ„ì¹˜ì— ê³ ì •
func lock_camera():
	is_camera_locked = true
	time_since_last_mining = 0.0
	
	# ì¹´ë©”ë¼ì— ì‹ í˜¸ ì „ì†¡
	var camera = get_tree().get_first_node_in_group("camera")
	if camera and camera.has_method("lock_to_target"):
		camera.lock_to_target(global_position)

# ì¹´ë©”ë¼ ê³ ì • í•´ì œ
func unlock_camera():
	is_camera_locked = false
	time_since_last_mining = 0.0
	
	# ì¹´ë©”ë¼ì— ì‹ í˜¸ ì „ì†¡
	var camera = get_tree().get_first_node_in_group("camera")
	if camera and camera.has_method("unlock_from_target"):
		camera.unlock_from_target()

# ë°”ìœ„ í”ë“¤ë¦¼ íš¨ê³¼
func update_shake_effect(delta):
	if not sprite:
		return
	
	# ì§„í–‰ë„ê°€ ìˆìœ¼ë©´ í”ë“¤ë¦¼
	if now_time > 0 and is_character_inside:
		# ì§„í–‰ë„ì— ë”°ë¼ í”ë“¤ë¦¼ ê°•ë„ ì¦ê°€
		var progress_ratio = now_time / max_time
		shake_amount = lerp(shake_amount, 2.0 + progress_ratio * 3.0, delta * 10.0)
		
		# ëœë¤ í”ë“¤ë¦¼
		var shake_offset = Vector2(
			randf_range(-shake_amount, shake_amount),
			randf_range(-shake_amount, shake_amount)
		)
		sprite.position = original_position + shake_offset
	else:
		# í”ë“¤ë¦¼ ê°ì†Œ
		shake_amount = lerp(shake_amount, 0.0, delta * 10.0)
		sprite.position = lerp(sprite.position, original_position, delta * 10.0)
